venndb-usage/tests/fails/unknown_attr_struct.rs
use venndb::VennDB;

#[derive(Debug, VennDB)]
#[venndb(foo)]
struct Employee {
    id: u32,
}

fn main() {}
