venndb-usage/tests/fails/unknown_attr_struct.stderr
error: Invalid field-level `venndb` attribute
       Expected one of: `name`
 --> tests/fails/unknown_attr_struct.rs:4:10
  |
4 | #[venndb(foo)]
  |          ^^^
